--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,109 @@
     <title>Bikerz zone</title>
     <!-- css link  -->
     <link rel="stylesheet" href="style.css">
-   <!-- bootstrap css cdn  -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- bootstrap css cdn  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar container-fluid navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <a class="navbar-brand fw-semibold fs-3" href="#">Bikerz Zone</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto me-3 mb-2 mb-lg-0 fw-semibold">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Bike</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Discount</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Blog</a>
+                        </li>
+                    </ul>
+                    <button class="btn btn-outline-danger text-dark fw-semibold" type="submit">Login</button>
+                </div>
+            </div>
+        </nav>
+
+        <!-- banner section here  -->
+
+        <div id="carouselExampleIndicators" class="carousel slide container my-5 bg-danger bg-opacity-25 p-5 rounded">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active bg-danger" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" class="bg-danger" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" class="bg-danger" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                    <div class="col-12 text-center text-md-start  div col-md-6 d-flex align-items-center">
+                        <div class="mb-4">
+                            <h1>Ride-on R15 V4 with Smile</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi similique velit dignissimos voluptas pariatur ipsa hic ad, eos atque. Sapiente ex quam ducimus fugit soluta necessitatibus alias incidunt adipisci quos?</p>
+                            <button class="btn btn-danger">Purchase</button>
+                        </div>
+                    </div>
+                    <div class="col-12 div col-md-6">
+                        <img class="img-fluid" src="images/bike-1.png" alt="banner-image">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-12 text-center text-md-start div col-md-6 d-flex align-items-center">
+                        <div class="mb-4">
+                            <h1>Ride-on R15 V4 with Smile</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi similique velit dignissimos voluptas pariatur ipsa hic ad, eos atque. Sapiente ex quam ducimus fugit soluta necessitatibus alias incidunt adipisci quos?</p>
+                            <button class="btn btn-danger">Purchase</button>
+                        </div>
+                    </div>
+                    <div class="col-12 div col-md-6">
+                        <img class="img-fluid" src="images/bike-2.png" alt="banner-image">
+                    </div>
+                </div>              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-12 text-center text-md-start col-md-6 d-flex align-items-center">
+                        <div class="mb-4">
+                            <h1>Ride-on R15 V4 with Smile</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi similique velit dignissimos voluptas pariatur ipsa hic ad, eos atque. Sapiente ex quam ducimus fugit soluta necessitatibus alias incidunt adipisci quos?</p>
+                            <button class="btn btn-danger">Purchase</button>
+                        </div>
+                    </div>
+                    <div class="col-12 div col-md-6">
+                        <img class="img-fluid" src="images/bike-3.png" alt="banner-image">
+                    </div>
+                </div>              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon bg-danger rounded-circle" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon bg-danger rounded-circle" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+            
+    </header>
 
 
     <!-- bootstrap js cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
